--- a/BurningIdeas/frontend/src/index.css
+++ b/BurningIdeas/frontend/src/index.css
@@ -9,7 +9,6 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -18,20 +17,24 @@ body {
 }
 
 main {
-  max-width: 75%;
+  min-height: 90vh;
 }
 
 h1 {
   font-weight: 300;
 }
 
+#goback,
 #newidea,
 #signin,
 #signup {
+  letter-spacing: 1px;
+  color: #fefefe;
   border: none;
   background-color: rgb(194, 181, 161);
 }
 
+#goback:hover,
 #newidea:hover,
 #signin:hover,
 #signup:hover {
@@ -70,18 +73,32 @@ h1 {
   height: 26px;
 }
 
+#editaccountcontainer {
+  max-width: 50%;
+}
+
+#editaccountutons {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0.5rem;
+}
+
 #footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
   text-align: center;
   font-size: 12px;
+  z-index: -1;
 }
 
 @media (max-width: 576px) {
   .card {
     max-width: 90%;
     margin: 0 auto;
+  }
+  #editaccountcontainer {
+    max-width: 75%;
   }
 }
